# bookops-marc

./: .gitignore  .travis.yml  LICENSE  README.md  dev-requirements.txt  dev-requriements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: unit-tests.yaml
bookops_marc/: __init__.py  bib.py  constants.py  errors.py  item.py  local_values.py  models.py  order.py  reader.py  utils.py
tests/: conftest.py  test_SierraBibReader.py  test_bib.py  test_bookops_marc.py  test_item.py  test_local_values.py  test_models.py  test_order.py  test_utils.py
