[tool.poetry]
name = "bookops-marc"
version = "0.10.0"
license = "MIT"
description = "A sweetened `pymarc.Record` module for extraction of data from local Sierra records."
authors = ["Tomek <klingaroo@gmail.com>", "Charlotte Kostelic <charlottekostelic@bookops.org>"]
readme = "README.md"
keywords = ["cataloging", "bibliographic records", "MARC"]

[tool.poetry.dependencies]
python = "^3.8"
pymarc = "^5.2.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.1.0"
black = "^24.8.0"
mypy = "^1.13"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
relative_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
