[project]
name = "bookops-marc"
version = "0.12.0"
license = "MIT"
description = "A sweetened `pymarc.Record` module for extraction of data from local Sierra records."
authors = [{name = "Tomek", email = "klingaroo@gmail.com"}, {name = "Charlotte Kostelic", email = "charlottekostelic@bookops.org"}]
readme = "README.md"
keywords = ["cataloging", "bibliographic records", "MARC"]
requires-python = ">=3.8"
dependencies = ["pymarc (>=5.2.3, <5.3.0)"]


[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.8.0"
mypy = "^1.13"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=bookops_marc/"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
