[project]
name = "bookops-marc"
version = "0.12.0"
license = "MIT"
description = "A sweetened `pymarc.Record` module for extraction of data from local Sierra records."
authors = [{name = "Tomek", email = "klingaroo@gmail.com"}, {name = "Charlotte Kostelic", email = "charlottekostelic@bookops.org"}]
readme = "README.md"
keywords = ["cataloging", "bibliographic records", "MARC"]
requires-python = ">=3.10"
dependencies = ["pymarc (>=5.2.3)"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--cov=bookops_marc/"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]
omit = ["tests/*"]
branch = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["F", "E", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "ANN"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false